added top nav and wroking ut content shell to populate with flex boxes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Times</title>
+  <title>Tea Cozy</title>
   <link rel="stylesheet" href="./resources/css/style.css" type="text/css" />
 </head>
 
 <body>
-  <!-- Header Section -->
+<!-- Header Section -->
+  <header class="header">
+    <div class="logo">
+      <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
+    </div>
+
+    <div>
+      <nav class="header-nav">
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#featured-tea">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
+      </nav>
+    </div>
+  </header>
+
+<!-- Hero image -->
+  <div class="hero-image">
+    <div class="header-text">
+      <span>Our Mission</span>
+      <br>
+      <span>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</span>
+    </div>
+  </div>
+
+<!-- featured tea section -->
+  <div id="featured-tea" class="tea-of-the-month">
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at the Tea Cozy?</h4>
+
+    <div class="all-items">
+      <div class="store-items">
+      <span>Fall Berry Blitz Tea</span>
+      <img src="" alt="">
+    </div>
+
+    <div class="store-items">
+      <span>Fall Berry Blitz Tea</span>
+      <img src="" alt="">
+    </div>
+
+    <div class="store-items">
+      <span>Fall Berry Blitz Tea</span>
+      <img src="" alt="">
+    </div>
+
+    <div class="store-items">
+      <span>Fall Berry Blitz Tea</span>
+      <img src="" alt="">
+    </div>
+
+    <div class="store-items">
+      <span>Fall Berry Blitz Tea</span>
+      <img src="" alt="">
+    </div>
+  </div>
+</div>
+
 </body>
