added flex boxes to featured products

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <br>
       <span>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</span>
     </div>
+    <div>
+      <img src="./resources\images\img-mission-background.jpg" alt="mission background">
+    </div>
   </div>
 
 <!-- featured tea section -->
@@ -37,28 +40,29 @@
 
     <div class="all-items">
       <div class="store-items">
+      <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
       <span>Fall Berry Blitz Tea</span>
-      <img src="" alt="">
     </div>
 
     <div class="store-items">
-      <span>Fall Berry Blitz Tea</span>
-      <img src="" alt="">
+      <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+      <span>Spiced Rum Tea</span>
     </div>
 
     <div class="store-items">
-      <span>Fall Berry Blitz Tea</span>
-      <img src="" alt="">
+      <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
+      <span>Seasonal Donuts</span>
     </div>
 
     <div class="store-items">
-      <span>Fall Berry Blitz Tea</span>
-      <img src="" alt="">
+      <img src="./resources/images/img-donut.jpg" alt="Myrtle Ave Tea">
+      <span>Myrtle Ave Tea</span>
     </div>
 
     <div class="store-items">
-      <span>Fall Berry Blitz Tea</span>
-      <img src="" alt="">
+      <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+      <span>Bedford Bizarre Tea</span>
+
     </div>
   </div>
 </div>
