fixed header and navigation, starting on locations section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
     </div>
 
-    <div>
-      <nav class="header-nav">
+    <div class="header-nav">
+      <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#featured-tea">Featured Tea</a></span>
         <span><a href="#locations">Locations</a></span>
@@ -23,13 +23,9 @@
 
 <!-- Hero image -->
   <div class="hero-image">
-    <div class="header-text">
-      <span>Our Mission</span>
-      <br>
-      <span>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</span>
-    </div>
-    <div>
-      <img src="./resources\images\img-mission-background.jpg" alt="mission background">
+    <div id="mission" class="flex-container">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
   </div>
 
@@ -62,9 +58,24 @@
     <div class="store-items">
       <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
       <span>Bedford Bizarre Tea</span>
-
     </div>
   </div>
 </div>
 
+<!-- locations section -->
+<div id="locations" class="locations">
+  <h2>Locations</h2>
+  <div>
+    <span></span>
+  </div>
+
+  <div>
+    <span></span>
+  </div>
+
+  <div>
+    <span></span>
+  </div>
+  <img src="./resources/images/img-locations-background.jpg" alt="coffe cup on table">
+</div>
 </body>
