added cover photos and locations section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </header>
 
-<!-- Hero image -->
+<!-- hero image section -->
   <div class="hero-image">
     <div id="mission" class="flex-container">
       <h2>Our Mission</h2>
@@ -65,17 +65,28 @@
 <!-- locations section -->
 <div id="locations" class="locations">
   <h2>Locations</h2>
-  <div>
-    <span></span>
+  <div class="address-big-box">
+    <div class="address">
+      <p>Downtown
+      <br>384 West 4th St
+      <br>Suite 108
+      Portland, Maine</p>
+    </div>
+
+    <div class="address">
+      <p>Downtown
+      <br>384 West 4th St
+      <br>Suite 108
+      Portland, Maine</p>
+    </div>
+
+    <div class="address">
+      <p>Downtown
+      <br>384 West 4th St
+      <br>Suite 108
+      Portland, Maine</p>
+    </div>
   </div>
 
-  <div>
-    <span></span>
-  </div>
-
-  <div>
-    <span></span>
-  </div>
-  <img src="./resources/images/img-locations-background.jpg" alt="coffe cup on table">
 </div>
 </body>
