fixed header position and worked on other content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <!-- Header Section -->
+<div>
   <header class="header">
     <div class="logo">
       <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
@@ -29,16 +30,18 @@
     </div>
   </div>
 
+
 <!-- featured tea section -->
   <div id="featured-tea" class="tea-of-the-month">
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at the Tea Cozy?</h4>
 
     <div class="all-items">
+
       <div class="store-items">
-      <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
-      <span>Fall Berry Blitz Tea</span>
-    </div>
+        <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
+        <span>Fall Berry Blitz Tea</span>
+      </div>
 
     <div class="store-items">
       <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
@@ -59,34 +62,51 @@
       <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
       <span>Bedford Bizarre Tea</span>
     </div>
+
   </div>
 </div>
 
 <!-- locations section -->
 <div id="locations" class="locations">
-  <h2>Locations</h2>
+
+
   <div class="address-big-box">
+    <h2>Locations</h2>
+
     <div class="address">
-      <p>Downtown
-      <br>384 West 4th St
-      <br>Suite 108
-      Portland, Maine</p>
+      <h3>Downtown<h3>
+      <span>384 West 4th St</span>
+      <span>Suite 108</span>
+      <span>Portland, Maine</span>
     </div>
 
     <div class="address">
-      <p>Downtown
-      <br>384 West 4th St
-      <br>Suite 108
-      Portland, Maine</p>
+      <h3>East Bayside<h3>
+      <span>3433 Phisherman's Avenue</span>
+      <span>(Northwest Corner)</span>
+      <span>Portland, Maine</span>
     </div>
 
     <div class="address">
-      <p>Downtown
-      <br>384 West 4th St
-      <br>Suite 108
-      Portland, Maine</p>
+      <h3>Oakdale<h3>
+      <span>515 Crescent Avenue</span>
+      <span>Second Floor</span>
+      <span>Portland, Maine</span>
     </div>
   </div>
-
 </div>
+
+
+<div class="the-tea-cozy">
+  <h2>The Tea Cozy</h2><br>
+  <h5>contact@theteacozy.com
+  917-555-8904</h5>
+</div>
+
+
+<footer class="footer">
+  <h5>Copyright The Tea Cozy 2017</h5>
+</footer>
+
+
 </body>
