--- a/index.html
+++ b/index.html
@@ -7,106 +7,103 @@
 
 <body>
 <!-- Header Section -->
-<div>
-  <header class="header">
-    <div class="logo">
-      <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
-    </div>
-
-    <div class="header-nav">
-      <nav>
-        <span><a href="#mission">Mission</a></span>
-        <span><a href="#featured-tea">Featured Tea</a></span>
-        <span><a href="#locations">Locations</a></span>
-      </nav>
-    </div>
-  </header>
-
-<!-- hero image section -->
-  <div class="hero-image">
-    <div id="mission" class="flex-container">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-    </div>
-  </div>
-
-
-<!-- featured tea section -->
-  <div id="featured-tea" class="tea-of-the-month">
-    <h2>Tea of the Month</h2>
-    <h4>What's Steeping at the Tea Cozy?</h4>
-
-    <div class="all-items">
-
-      <div class="store-items">
-        <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
-        <span>Fall Berry Blitz Tea</span>
+  <div>
+    <header class="header">
+      <div class="logo">
+        <img src="./resources/images/img-tea-cozy-logo.png" alt="Tea Cozy logo">
       </div>
 
-    <div class="store-items">
-      <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
-      <span>Spiced Rum Tea</span>
+      <div class="header-nav">
+        <nav>
+          <span><a href="#mission">Mission</a></span>
+          <span><a href="#featured-tea">Featured Tea</a></span>
+          <span><a href="#locations">Locations</a></span>
+        </nav>
+      </div>
+    </header>
+
+  <!-- hero image section -->
+    <div class="hero-image">
+      <div id="mission" class="flex-container">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
     </div>
 
-    <div class="store-items">
-      <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
-      <span>Seasonal Donuts</span>
-    </div>
 
-    <div class="store-items">
-      <img src="./resources/images/img-donut.jpg" alt="Myrtle Ave Tea">
-      <span>Myrtle Ave Tea</span>
-    </div>
+  <!-- featured tea section -->
+    <div id="featured-tea" class="tea-of-the-month">
+      <h2>Tea of the Month</h2>
+      <h4>What's Steeping at the Tea Cozy?</h4>
 
-    <div class="store-items">
-      <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
-      <span>Bedford Bizarre Tea</span>
-    </div>
+      <div class="all-items">
 
+        <div class="store-items">
+          <img src="./resources/images/img-berryblitz.jpg" alt="Berry Blitz Tea">
+          <span>Fall Berry Blitz Tea</span>
+        </div>
+
+      <div class="store-items">
+        <img src="./resources/images/img-spiced-rum.jpg" alt="Spiced Rum Tea">
+        <span>Spiced Rum Tea</span>
+      </div>
+
+      <div class="store-items">
+        <img src="./resources/images/img-donut.jpg" alt="Seasonal Donuts">
+        <span>Seasonal Donuts</span>
+      </div>
+
+      <div class="store-items">
+        <img src="./resources/images/img-donut.jpg" alt="Myrtle Ave Tea">
+        <span>Myrtle Ave Tea</span>
+      </div>
+
+      <div class="store-items">
+        <img src="./resources/images/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea">
+        <span>Bedford Bizarre Tea</span>
+      </div>
+
+    </div>
   </div>
-</div>
 
-<!-- locations section -->
-<div id="locations" class="locations">
+  <!-- locations section -->
+  <div id="locations" class="locations">
+    <div class="address-big-box">
+      <h2>Locations</h2>
 
+      <div class="address">
+        <h3>Downtown</h3>
+        <p>384 West 4th St</p>
+        <p>Suite 108</p>
+        <p>Portland, Maine</p>
+      </div>
 
-  <div class="address-big-box">
-    <h2>Locations</h2>
+      <div class="address">
+        <h3>East Bayside</h3>
+        <p>3433 Phisherman's Avenue</p>
+        <p>(Northwest Corner)</p>
+        <p>Portland, Maine</p>
+      </div>
 
-    <div class="address">
-      <h3>Downtown<h3>
-      <span>384 West 4th St</span>
-      <span>Suite 108</span>
-      <span>Portland, Maine</span>
-    </div>
-
-    <div class="address">
-      <h3>East Bayside<h3>
-      <span>3433 Phisherman's Avenue</span>
-      <span>(Northwest Corner)</span>
-      <span>Portland, Maine</span>
-    </div>
-
-    <div class="address">
-      <h3>Oakdale<h3>
-      <span>515 Crescent Avenue</span>
-      <span>Second Floor</span>
-      <span>Portland, Maine</span>
+      <div class="address">
+        <h3>Oakdale</h3>
+        <p>515 Crescent Avenue</p>
+        <p>Second Floor</p>
+        <p>Portland, Maine</p>
+      </div>
+      </div>
     </div>
   </div>
-</div>
 
+<!-- contact section -->
+  <div id="contact">
+    <h2>The Tea Cozy</h2>
+    <h5>contact@theteacozy.com</h5>
+    <h5>917-555-8904</h5>
+  </div>
 
-<div class="the-tea-cozy">
-  <h2>The Tea Cozy</h2><br>
-  <h5>contact@theteacozy.com
-  917-555-8904</h5>
-</div>
-
-
-<footer class="footer">
-  <h5>Copyright The Tea Cozy 2017</h5>
-</footer>
-
-
+<!-- footer section -->
+  <footer class="footer">
+    <h5>Copyright The Tea Cozy 2017</h5>
+  </footer>
 </body>
